# research-assistant

./: .gitignore  DEPLOYMENT.md  DEPLOY_NOW.md  README.md  USAGE.md  config.yaml.template  packages.txt  pyproject.toml  requirements.txt  test_basic.py
.streamlit/: config.toml  secrets.toml.example
src/: main.py
src/agent/: orchestrator.py  prompts.py
src/analysis/: fact_extractor.py  query_decomposer.py  synthesizer.py
src/search/: content_fetcher.py  google_search_engine.py  search_engine.py  search_types.py
src/utils/: config_loader.py  logging_setup.py
